updating templates to net5

--- a/src/templates/base/dotnet/makefile
+++ b/src/templates/base/dotnet/makefile
@@ -1,7 +1,8 @@
-FrameworkVersion = "netcoreapp3.0"
+FrameworkVersion = "net5.0"
 
 default:
 	rm -rf $(out-dir)
+	# mkdir -p ${out-dir}/sln
 	dotnet new solution -n $(project-name) -o $(out-dir)/sln --force
 	dotnet new $(template) -f $(FrameworkVersion) -n $(project-name) -o $(out-dir)/csproj/$(project-name) --force
 	dotnet sln $(out-dir)/sln/$(project-name).sln add $(out-dir)/csproj/$(project-name)/$(project-name).csproj
@@ -16,7 +17,7 @@ default:
 	for f in $$(find "$(out-dir)" -type f); do sed -i.bak 's/$(project-name)/\<\%\= className \%\>/g' "$$f"; done;
 	for f in $$(find "$(out-dir)" -type f -name "*.sln.template"); do sed -i.bak 's/..\\csproj\\/\<\%\= projectPathFromSln \%\>/g' "$$f"; done;
 	for f in $$(find "$(out-dir)" -type f -name "*.sln.template"); do PROJECT_GUID=$$(sed -n 's/.*.csproj\"\, \"{\(.*\)}\".*/\1/p' "$$f"); sed -i.bak 's/'"$$PROJECT_GUID"'/\<\%\= projectGuid \%\>/g' "$$f"; done;
-	
+
 	for f in $$(find "$(out-dir)" -type f -name "*.bak"); do rm -rf $$f; done;
 
 	rm -rf $(out-dir)/csproj/$(project-name)
