--- a/src/package.json
+++ b/src/package.json
@@ -27,7 +27,11 @@
   },
   "private": true,
   "dependencies": {
-    "tslib": "^2.0.0"
+    "guid-typescript": "^1.0.9",
+    "minimist": "^1.2.5",
+    "tslib": "^2.0.0",
+    "underscore": "^1.13.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nrwl/cli": "12.7.1",
@@ -39,8 +43,12 @@
     "@nrwl/nx-plugin": "^12.7.1",
     "@nrwl/tao": "12.7.1",
     "@nrwl/workspace": "12.7.1",
+    "@types/cross-spawn": "^6.0.2",
     "@types/jest": "26.0.24",
+    "@types/minimist": "^1.2.2",
     "@types/node": "14.14.33",
+    "@types/underscore": "^1.11.3",
+    "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "dotenv": "~10.0.0",
