--- a/src/tsconfig.base.json
+++ b/src/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "src/dotnet": ["packages/dotnet/src/index.ts"]
+      "@src/common": ["packages/common/src/index.ts"],
+      "@src/dotnet": ["packages/dotnet/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
