--- a/src/packages/common/package.json
+++ b/src/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@src/common",
+  "name": "@nx-boat-tools/common",
   "version": "0.0.1",
   "main": "src/index.js",
   "generators": "./generators.json",
