--- a/src/packages/dotnet/package.json
+++ b/src/packages/dotnet/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@src/dotnet",
+  "name": "@nx-boat-tools/dotnet",
   "version": "0.0.1",
   "main": "src/index.js",
   "generators": "./generators.json",
   "executors": "./executors.json",
   "dependencies": {
-    "@src/common": "0.0.1"
+    "@nx-boat-tools/common": "0.0.1"
   }
 }
