--- a/src/tsconfig.base.json
+++ b/src/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@nx-boat-tools/common": ["packages/common/src/index.ts"],
+      "@nx-boat-tools/docker": ["packages/docker/src/index.ts"],
       "@nx-boat-tools/dotnet": ["packages/dotnet/src/index.ts"]
     }
   },
