template cleanup and adding helm

--- a/src/templates/dotnet-classlib/makefile
+++ b/src/templates/dotnet-classlib/makefile
@@ -2,5 +2,5 @@ ROOT_DIR:=$(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 default:
 	rm -rf $(ROOT_DIR)files
-	make -C ../base/dotnet/ template=classlib project-name=ClassLibraryTemplate out-dir=$(ROOT_DIR)files
+	make -C ../dotnet-base/ template=classlib project-name=ClassLibraryTemplate out-dir=$(ROOT_DIR)files
 	
