--- a/src/templates/dotnet-console/makefile
+++ b/src/templates/dotnet-console/makefile
@@ -1,5 +1,5 @@
 ROOT_DIR:=$(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 default:
-	make -C ../base/dotnet/ template=console project-name=ConsoleTemplate out-dir=$(ROOT_DIR)files
+	make -C ../dotnet-base/ template=console project-name=ConsoleTemplate out-dir=$(ROOT_DIR)files
 	
