--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "src",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "nx": "nx",
@@ -56,6 +56,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.1",
     "prettier": "^2.3.1",
+    "semver": "^7.3.5",
     "ts-jest": "27.0.5",
     "ts-node": "~10.2.1",
     "tslib": "^2.0.0",
