--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,39 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+*.js
+!jest.config.js
+!jest.preset.js
+*.d.ts
+!**/schema.d.ts
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
