--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
+      - uses: geertvdc/setup-hub@master
       - name: Get release assets
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
