--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Hub CLI
+        run: |
+          wget -q -O- \
+          https://github.com/github/hub/releases/download/v2.12.8/hub-linux-amd64-2.12.8.tgz  | \
+          tar xz --strip-components=1 --wildcards '*/bin/hub'
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
           cache: 'npm'
-      - uses: geertvdc/setup-hub@master
       - name: Get release assets
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
