--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: Node.js Package
+name: Release
 
 on:
   release:
-    types: [published]
+    types: [created]
 
 jobs:
   build:
@@ -26,3 +26,4 @@ jobs:
           TAG_NAME: ${{ github.event.release.tag_name }}
         run: |
           hub release download "$TAG_NAME" -i "*.zip"
+          for f in $$(find . -type f -name "*.zip"); do unzip -q $$f; done;
