adding in version

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -39,5 +39,5 @@ jobs:
           ARTIFACTS_DIR: ./dist/artifacts
         run: |
           hub release create $(find "$ARTIFACTS_DIR" -type f -printf "-a %p ") -d -m "$RELEASE_VERSION" -m "$COMMIT_MESSAGE" "$RELEASE_VERSION"
-      # - name: Update versions
-      #   run: make version
+      - name: Update versions
+        run: make version
