--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -18,16 +18,19 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - uses: fregante/setup-git-user@v1
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
           cache: 'npm'
       - name: Create build artifacts
         run: |
+          git remote set-url origin https://$GITHUB_TOKEN@github.com/nx-boat-tools/nx-boat-tools.git
           make artifacts
           make version
         env:
           base_ref: origin/${{ github.base_ref }}
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN_KILLIAN }}
       - name: Set variables
         run: |
           VER=$(cat RELEASE_VERSION)
