--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -4,7 +4,7 @@ name: Merge
 
 on:
   push:
-    branches: [ main,develop ]
+    branches: [ main ]
 
 jobs:
   version:
@@ -18,14 +18,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: fregante/setup-git-user@v1
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
           cache: 'npm'
       - name: Create build artifacts
         run: |
-          git remote set-url origin https://$GITHUB_TOKEN@github.com/nx-boat-tools/nx-boat-tools.git
+          git config --global user.email "hale.killian@gmail.com"
+          git config --global user.name "Killian Hale"
+          git remote add origin_kh https://matholum:$GITHUB_TOKEN@github.com/nx-boat-tools/nx-boat-tools.git
           make artifacts
           make version
         env:
