--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          token: ${{ secrets.GIT_TOKEN_KILLIAN }}
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
@@ -26,22 +27,20 @@ jobs:
         run: |
           git config --global user.email "hale.killian@gmail.com"
           git config --global user.name "Killian Hale"
-          git remote add origin_kh https://matholum:$GITHUB_TOKEN@github.com/nx-boat-tools/nx-boat-tools.git
           make artifacts
           make version
         env:
           base_ref: origin/${{ github.base_ref }}
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN_KILLIAN }}
       - name: Set variables
         run: |
           VER=$(cat RELEASE_VERSION)
           echo "RELEASE_VERSION=$VER" >> $GITHUB_ENV
-      - name: Create release
-        env:
-          GITHUB_USER: ${{ secrets.GITHUB_USER }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-          ARTIFACTS_DIR: ./dist/artifacts
-        run: |
-          hub release create $(find "$ARTIFACTS_DIR" -type f -printf "-a %p ") -d -m "$RELEASE_VERSION" -m "$COMMIT_MESSAGE" "$RELEASE_VERSION"
+      # - name: Create release
+      #   env:
+      #     GITHUB_USER: ${{ secrets.GITHUB_USER }}
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
+      #     COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+      #     ARTIFACTS_DIR: ./dist/artifacts
+      #   run: |
+      #     hub release create $(find "$ARTIFACTS_DIR" -type f -printf "-a %p ") -d -m "$RELEASE_VERSION" -m "$COMMIT_MESSAGE" "$RELEASE_VERSION"
