--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Merge
 
 on:
@@ -43,4 +41,5 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
           ARTIFACTS_DIR: ./dist/artifacts
         run: |
+          echo 🚢 Creating release $RELEASE_VERSION...\n
           hub release create $(find "$ARTIFACTS_DIR" -type f -printf "-a %p ") -d -m "$RELEASE_VERSION" -m "$COMMIT_MESSAGE" "v$RELEASE_VERSION"
