--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
 name: Release
 
 on:
@@ -20,14 +17,18 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-          cache: 'npm'
+          registry-url: https://registry.npmjs.org/
       - name: Get release assets
         env:
           GITHUB_USER: ${{ secrets.GITHUB_USER }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_KILLIAN}}
           TAG_NAME: ${{ github.event.release.tag_name }}
           PACKAGES_DIST_DIR: ./dist/packages
         run: |
-          hub release download "$TAG_NAME" -i "*.zip"
-          for f in $(find . -type f -name "*.zip"); do unzip -q $f; done;
-          for f in $(find "$PACKAGES_DIST_DIR" -type d -maxdepth 1 ! -name "packages"); do npm publish $f --dry-run; done;
+          echo 📩 Fetching release assets...
+          hub release download "$TAG_NAME" -i "*.zip";
+          
+          for f in $(find . -type f -name "*.zip"); do echo 📦 Unzipping $f...; unzip -q $f; done;
+          echo 
+          for f in $(find "$PACKAGES_DIST_DIR" -type d -maxdepth 1 ! -name "packages"); do echo 📡 Publishing $f to npm...; npm publish $f --access public; echo; done;
