--- a/package.json
+++ b/package.json
@@ -54,12 +54,20 @@
     "dotenv": "~10.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.3.0",
+    "import-sort-style-renke": "^6.0.0",
     "jest": "27.2.2",
     "prettier": "^2.4.1",
+    "prettier-plugin-import-sort": "^0.0.7",
     "semver": "^7.3.5",
     "ts-jest": "27.0.5",
     "ts-node": "~10.2.1",
     "tslib": "^2.0.0",
     "typescript": "~4.3.5"
+  },
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "parser": "typescript",
+      "style": "renke"
+    }
   }
 }
