--- a/packages/dotnet/package.json
+++ b/packages/dotnet/package.json
@@ -5,6 +5,13 @@
   "generators": "./generators.json",
   "executors": "./executors.json",
   "dependencies": {
-    "@nx-boat-tools/common": "0.0.1"
+    "@nrwl/devkit": "12.9.0",
+    "@nrwl/tao": "12.9.0",
+    "@nx-boat-tools/common": "0.0.1",
+    "guid-typescript": "^1.0.9",
+    "minimist": "^1.2.5",
+    "tslib": "^2.0.0",
+    "underscore": "^1.13.1",
+    "xml2js": "^0.4.23"
   }
 }
