--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Build
 
 on:
-  pull_request:
-    branches: [ main,develop ]
+  push:
+    branches: [ develop ]
 
 jobs:
   build:
@@ -11,16 +11,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-        token: ${{ secrets.GIT_TOKEN_KILLIAN }}
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
         cache: 'npm'
     - name: Build affected
-      env:
-        base_ref: origin/${{ github.base_ref }}
       run: |
-        git config --global user.email "hale.killian@gmail.com"
-        git config --global user.name "Killian Hale"
-        make format commit=true commit-branch=develop
-        make
+        make base_ref=origin/main
