--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
           room-id: ${{ secrets.GITTER_ROOM_COMMUNITY }}
           token: ${{ secrets.GITTER_TOKEN_KILLIAN }}
           text: |
-          \#\# 🚢 Version ${{ github.event.release.tag_name }} was just released!
+          ## 🚢 Version ${{ github.event.release.tag_name }} was just released!
           This release contains the following npm packages:
           $env.RELEASE_CONTENTS_MESSAGE
 
