--- a/packages/helm/package.json
+++ b/packages/helm/package.json
@@ -3,5 +3,12 @@
   "version": "0.1.1",
   "main": "src/index.js",
   "generators": "./generators.json",
-  "executors": "./executors.json"
+  "executors": "./executors.json",
+  "dependencies": {
+    "@nrwl/devkit": "12.9.0",
+    "@nrwl/tao": "12.9.0",
+    "minimist": "^1.2.5",
+    "tslib": "^2.0.0",
+    "underscore": "^1.13.1"
+  }
 }
