--- a/packages/dotnet/package.json
+++ b/packages/dotnet/package.json
@@ -12,6 +12,6 @@
     "minimist": "^1.2.5",
     "tslib": "^2.0.0",
     "underscore": "^1.13.1",
-    "xml2js": "^0.4.23"
+    "xmlbuilder2": "^3.0.2"
   }
 }
