--- a/templates/dotnet-console/makefile
+++ b/templates/dotnet-console/makefile
@@ -1,5 +1,6 @@
 ROOT_DIR:=$(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 default:
-	make -C ../dotnet-base/ template=console project-name=ConsoleTemplate out-dir=$(ROOT_DIR)files
+	rm -rf $(ROOT_DIR)files
+	make -C ../dotnet-base/ template=console project-name=ConsoleTemplate out-dir=../../packages/dotnet/src/generators/console/files/generated
 	
