--- a/templates/dotnet-webapi/makefile
+++ b/templates/dotnet-webapi/makefile
@@ -1,5 +1,6 @@
 ROOT_DIR:=$(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 default:
-	make -C ../dotnet-base/ template=webapi project-name=WebApiTemplate out-dir=$(ROOT_DIR)files
+	rm -rf $(ROOT_DIR)files
+	make -C ../dotnet-base/ template=webapi project-name=WebApiTemplate out-dir=../../packages/dotnet/src/generators/webapi/files/generated
 	
