--- a/templates/dotnet-console/makefile
+++ b/templates/dotnet-console/makefile
@@ -2,5 +2,5 @@ ROOT_DIR:=$(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 default:
 	rm -rf $(ROOT_DIR)files
-	make -C ../dotnet-base/ template=console project-name=ConsoleTemplate out-dir=../../packages/dotnet/src/generators/console/files/generated
+	make -C ../dotnet-base/ template=console out-dir=../../packages/dotnet/src/generators/console/files/generated
 	
