--- a/templates/dotnet-classlib/makefile
+++ b/templates/dotnet-classlib/makefile
@@ -2,5 +2,5 @@ ROOT_DIR:=$(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 default:
 	rm -rf $(ROOT_DIR)files
-	make -C ../dotnet-base/ template=classlib project-name=ClassLibraryTemplate out-dir=../../packages/dotnet/src/generators/classlib/files/generated
+	make -C ../dotnet-base/ template=classlib out-dir=../../packages/dotnet/src/generators/classlib/files/generated
 	
