--- a/templates/dotnet-webapi/makefile
+++ b/templates/dotnet-webapi/makefile
@@ -2,5 +2,5 @@ ROOT_DIR:=$(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 default:
 	rm -rf $(ROOT_DIR)files
-	make -C ../dotnet-base/ template=webapi project-name=WebApiTemplate out-dir=../../packages/dotnet/src/generators/webapi/files/generated
+	make -C ../dotnet-base/ template=webapi out-dir=../../packages/dotnet/src/generators/webapi/files/generated
 	
