--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "xmlbuilder2": "^3.0.2"
   },
   "devDependencies": {
-    "@nrwl/cli": "12.9.0",
-    "@nrwl/devkit": "12.9.0",
-    "@nrwl/eslint-plugin-nx": "12.9.0",
-    "@nrwl/jest": "12.9.0",
-    "@nrwl/linter": "12.9.0",
-    "@nrwl/node": "12.9.0",
-    "@nrwl/nx-plugin": "^12.9.0",
-    "@nrwl/tao": "12.9.0",
-    "@nrwl/workspace": "12.9.0",
+    "@nrwl/cli": "12.10.0",
+    "@nrwl/devkit": "12.10.0",
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/linter": "12.10.0",
+    "@nrwl/node": "12.10.0",
+    "@nrwl/nx-plugin": "12.10.0",
+    "@nrwl/tao": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "27.0.2",
     "@types/minimist": "^1.2.2",
@@ -50,13 +50,13 @@
     "@types/node": "16.10.1",
     "@types/underscore": "^1.11.3",
     "@types/xml2js": "^0.4.9",
-    "@typescript-eslint/eslint-plugin": "~4.32.0",
-    "@typescript-eslint/parser": "~4.28.3",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "dotenv": "~10.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.3.0",
     "import-sort-style-renke": "^6.0.0",
-    "jest": "27.2.2",
+    "jest": "27.2.3",
     "jest-each": "^27.3.1",
     "mock-fs": "^5.1.2",
     "prettier": "^2.4.1",
@@ -74,3 +74,4 @@
     }
   }
 }
+
