updating GHA names and adding makefile documentation

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,10 +19,11 @@ jobs:
     - name: Build affected
       env:
         BASE_REF: origin/${{ github.base_ref }}
+        HEAD_REF: origin/${{ github.head_ref }}
       run: |
         git config --global user.email "hale.killian@gmail.com"
         git config --global user.name "Killian Hale"
-        make format base_ref=$BASE_REF commit=true commit-branch=develop
+        make format base_ref=$BASE_REF commit=true commit-branch=$HEAD_REF
         make templates -B
         make base_ref=$BASE_REF
     - uses: codecov/codecov-action@v2
