--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
   },
   "devDependencies": {
     "@jscutlery/semver": "^2.17.5",
-    "@nrwl/cli": "13.4.5",
-    "@nrwl/devkit": "13.4.5",
-    "@nrwl/eslint-plugin-nx": "13.4.5",
-    "@nrwl/jest": "13.4.5",
-    "@nrwl/linter": "13.4.5",
-    "@nrwl/node": "13.4.5",
-    "@nrwl/nx-plugin": "13.4.5",
-    "@nrwl/tao": "13.4.5",
-    "@nrwl/workspace": "13.4.5",
+    "@nrwl/cli": "13.7.3",
+    "@nrwl/devkit": "13.7.3",
+    "@nrwl/eslint-plugin-nx": "13.7.3",
+    "@nrwl/jest": "13.7.3",
+    "@nrwl/linter": "13.7.3",
+    "@nrwl/node": "13.7.3",
+    "@nrwl/nx-plugin": "13.7.3",
+    "@nrwl/tao": "13.7.3",
+    "@nrwl/workspace": "13.7.3",
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "27.0.2",
     "@types/minimist": "^1.2.2",
@@ -52,18 +52,18 @@
     "@types/node": "16.10.1",
     "@types/underscore": "^1.11.3",
     "@types/xml2js": "^0.4.9",
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "5.3.1",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "~10.0.0",
-    "eslint": "8.2.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
     "import-sort-style-renke": "^6.0.0",
     "jest": "27.2.3",
     "jest-each": "^27.3.1",
     "mock-fs": "^5.1.2",
-    "prettier": "^2.4.1",
+    "prettier": "2.5.1",
     "prettier-plugin-import-sort": "^0.0.7",
     "semver": "^7.3.5",
     "ts-jest": "27.0.5",
@@ -83,3 +83,4 @@
     }
   }
 }
+
