--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@ RELEASE_VERSION
 # dependencies
 /node_modules
 
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # IDEs and editors
 /.idea
 .project
