--- a/package.json
+++ b/package.json
@@ -81,6 +81,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "packageManager": "yarn@3.1.1",
+  "resolutions": {
+    "strip-ansi": "5.1.0"
   }
 }
-
