--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0-alpha.1",
   "license": "MIT",
   "scripts": {
-    "commit": "cz",
+    "commit": "./node_modules/cz-customizable/standalone.js",
+    "check-commit": "node ./scripts/commit-lint.js",
+    "check-lock-files": "node ./scripts/check-lock-files.js",
     "nx": "nx",
     "start": "nx serve",
     "build": "nx run-many --target=build --all",
@@ -24,7 +26,10 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "private": true,
   "dependencies": {
@@ -35,7 +40,7 @@
     "xmlbuilder2": "^3.0.2"
   },
   "devDependencies": {
-    "@jscutlery/semver": "^2.17.5",
+    "@jscutlery/semver": "^2.18.0",
     "@nrwl/cli": "13.7.3",
     "@nrwl/devkit": "13.7.3",
     "@nrwl/eslint-plugin-nx": "13.7.3",
@@ -56,18 +61,20 @@
     "@typescript-eslint/parser": "5.10.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^6.3.0",
     "dotenv": "~10.0.0",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
+    "husky": "^7.0.4",
     "import-sort-style-renke": "^6.0.0",
     "jest": "27.2.3",
     "jest-each": "^27.3.1",
     "mock-fs": "^5.1.2",
+    "pinst": "^2.1.6",
     "prettier": "2.5.1",
     "prettier-plugin-import-sort": "^0.0.7",
     "semver": "^7.3.5",
     "ts-jest": "27.0.5",
-    "ts-node": "~10.2.1",
     "tslib": "^2.0.0",
     "typescript": "~4.3.5"
   },
@@ -79,7 +86,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-customizable"
     }
   },
   "packageManager": "yarn@3.1.1",
