--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ jobs:
           https://github.com/github/hub/releases/download/v2.12.8/hub-linux-amd64-2.12.8.tgz  | \
           tar xz --strip-components=1 --wildcards '*/bin/hub'
       - uses: actions/checkout@v2
+        with:
+          token: ${{ github.token }}
       - uses: actions/setup-node@v2
         with:
           node-version: '17'
