--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-        token: ${{ secrets.GIT_TOKEN_KILLIAN }}
+        token: ${{ github.token }}
     - uses: actions/setup-node@v2
       with:
         node-version: '17'
