--- a/packages/dotnet/package.json
+++ b/packages/dotnet/package.json
@@ -4,10 +4,10 @@
   "main": "src/index.js",
   "generators": "./generators.json",
   "executors": "./executors.json",
+  "peerDependencies": {
+    "@nx-boat-tools/common": "0.1.2"
+  },
   "dependencies": {
-    "@nrwl/devkit": "12.9.0",
-    "@nrwl/tao": "12.9.0",
-    "@nx-boat-tools/common": "0.0.1",
     "guid-typescript": "^1.0.9",
     "minimist": "^1.2.5",
     "tslib": "^2.0.0",
