--- a/packages/dotnet/project.json
+++ b/packages/dotnet/project.json
@@ -51,10 +51,23 @@
           },
           {
             "input": "./packages/dotnet/src/generators",
-            "glob": "**/files/**/*",
+            "glob": "**/files/**/**/*",
             "output": "./src/generators"
           }
         ]
+      }
+    },
+    "updateDependencies": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "if [[ '{args.pathPrefix}' = 'undefined' ]] ; then pathPrefix=''; else pathPrefix='{args.pathPrefix}/'; fi; node ./scripts/update-dependencies.js --root=$PWD --peerVersion='{args.peerVersion}' --projectDir=${pathPrefix}packages/dotnet"
+      }
+    },
+    "version": {
+      "executor": "@nrwl/workspace:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "if [[ '{args.pathPrefix}' = 'undefined' ]] ; then pathPrefix=''; else pathPrefix='{args.pathPrefix}/'; fi; cd ${pathPrefix}packages/dotnet; npm version {args.to} --git-tag-version=false"
       }
     }
   }
