--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "semver": "^7.3.5",
     "ts-jest": "27.0.5",
     "tslib": "^2.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "verdaccio": "^5.5.2"
   },
   "importSort": {
     ".js, .jsx, .ts, .tsx": {
