--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,7 +2,10 @@ name: Pull Request
 
 on:
   pull_request:
-    branches: [ main,develop ]
+    branches:
+      - 'main'
+      - 'develop'
+      - '!dependabot/**'
 
 jobs:
   build:
