--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nx-boat-tools/common",
-  "version": "0.1.2",
+  "version": "0.1.0-alpha.2",
   "main": "src/index.js",
   "generators": "./generators.json",
   "executors": "./executors.json",
