--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "packageManager": "yarn@3.1.1",
   "resolutions": {
-    "strip-ansi": "5.1.0"
+    "strip-ansi": "5.1.0",
+    "ansi-regex": "5.0.1"
   }
 }
