--- a/package.json
+++ b/package.json
@@ -42,14 +42,13 @@
   "devDependencies": {
     "@jscutlery/semver": "^2.20.1",
     "@nrwl/cli": "13.8.8",
-    "@nrwl/devkit": "13.8.8",
-    "@nrwl/eslint-plugin-nx": "13.8.8",
-    "@nrwl/jest": "13.8.8",
-    "@nrwl/linter": "13.8.8",
-    "@nrwl/node": "13.8.8",
-    "@nrwl/nx-plugin": "13.8.8",
-    "@nrwl/tao": "13.8.8",
-    "@nrwl/workspace": "13.8.8",
+    "@nrwl/devkit": "13.9.2",
+    "@nrwl/eslint-plugin-nx": "13.9.2",
+    "@nrwl/jest": "13.9.2",
+    "@nrwl/linter": "13.9.2",
+    "@nrwl/node": "13.9.2",
+    "@nrwl/nx-plugin": "13.9.2",
+    "@nrwl/workspace": "13.9.2",
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "27.4.1",
     "@types/minimist": "^1.2.2",
@@ -57,6 +56,7 @@
     "@types/node": "17.0.21",
     "@types/underscore": "^1.11.3",
     "@types/xml2js": "^0.4.9",
+    "@types/yargs-parser": "^21.0.0",
     "@typescript-eslint/eslint-plugin": "5.14.0",
     "@typescript-eslint/parser": "5.10.2",
     "commitizen": "^4.2.4",
@@ -77,7 +77,8 @@
     "ts-jest": "27.1.3",
     "tslib": "^2.0.0",
     "typescript": "~4.6.2",
-    "verdaccio": "^5.7.1"
+    "verdaccio": "^5.7.1",
+    "nx": "13.9.2"
   },
   "importSort": {
     ".js, .jsx, .ts, .tsx": {
