--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   },
   "devDependencies": {
     "@jscutlery/semver": "^2.20.1",
-    "@nrwl/cli": "13.8.8",
-    "@nrwl/devkit": "13.9.2",
-    "@nrwl/eslint-plugin-nx": "13.9.2",
-    "@nrwl/jest": "13.9.2",
-    "@nrwl/linter": "13.9.2",
-    "@nrwl/node": "13.9.2",
-    "@nrwl/nx-plugin": "13.9.2",
-    "@nrwl/workspace": "13.9.2",
+    "@nrwl/cli": "13.9.4",
+    "@nrwl/devkit": "13.9.4",
+    "@nrwl/eslint-plugin-nx": "13.9.4",
+    "@nrwl/jest": "13.9.4",
+    "@nrwl/linter": "13.9.4",
+    "@nrwl/node": "13.9.4",
+    "@nrwl/nx-plugin": "13.9.4",
+    "@nrwl/workspace": "13.9.4",
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "27.4.1",
     "@types/minimist": "^1.2.2",
@@ -70,6 +70,7 @@
     "jest": "27.5.1",
     "jest-each": "^27.3.1",
     "mock-fs": "^5.1.2",
+    "nx": "13.9.4",
     "pinst": "^3.0.0",
     "prettier": "2.5.1",
     "prettier-plugin-import-sort": "^0.0.7",
@@ -77,8 +78,7 @@
     "ts-jest": "27.1.3",
     "tslib": "^2.0.0",
     "typescript": "~4.6.2",
-    "verdaccio": "^5.7.1",
-    "nx": "13.9.2"
+    "verdaccio": "^5.7.1"
   },
   "importSort": {
     ".js, .jsx, .ts, .tsx": {
