--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
   "private": true,
   "dependencies": {
     "guid-typescript": "^1.0.9",
-    "minimist": "^1.2.5",
-    "tslib": "^2.0.0",
-    "underscore": "^1.13.1",
+    "minimist": "^1.2.6",
+    "tslib": "^2.3.1",
+    "underscore": "^1.13.2",
     "xmlbuilder2": "^3.0.2"
   },
   "devDependencies": {
-    "@jscutlery/semver": "^2.20.1",
+    "@jscutlery/semver": "^2.21.6",
     "@nrwl/cli": "13.9.6",
     "@nrwl/devkit": "13.9.6",
     "@nrwl/eslint-plugin-nx": "13.9.6",
@@ -53,35 +53,35 @@
     "@types/jest": "27.4.1",
     "@types/minimist": "^1.2.2",
     "@types/mock-fs": "^4.13.1",
-    "@types/node": "17.0.21",
-    "@types/underscore": "^1.11.3",
+    "@types/node": "17.0.23",
+    "@types/underscore": "^1.11.4",
     "@types/xml2js": "^0.4.9",
     "@types/yargs-parser": "^21.0.0",
-    "@typescript-eslint/eslint-plugin": "5.14.0",
-    "@typescript-eslint/parser": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
     "dotenv": "~16.0.0",
-    "eslint": "8.11.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "husky": "^7.0.4",
     "import-sort-style-renke": "^6.0.0",
     "jest": "27.5.1",
-    "jest-each": "^27.3.1",
+    "jest-each": "^27.5.1",
     "mock-fs": "^5.1.2",
     "nx": "13.9.6",
     "pinst": "^3.0.0",
-    "prettier": "2.5.1",
+    "prettier": "2.6.2",
     "prettier-plugin-import-sort": "^0.0.7",
     "semver": "^7.3.5",
-    "ts-jest": "27.1.3",
-    "tslib": "^2.0.0",
-    "typescript": "~4.6.2",
-    "verdaccio": "^5.7.1"
+    "ts-jest": "27.1.4",
+    "tslib": "^2.3.1",
+    "typescript": "~4.6.3",
+    "verdaccio": "^5.8.0"
   },
   "importSort": {
-    ".js, .jsx, .ts, .tsx": {
+    ".js, .jsx, .ts, .tsx, .cjs": {
       "parser": "typescript",
       "style": "renke"
     }
