--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,5 +21,5 @@
       "@nx-boat-tools/helm": ["packages/helm/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp", ".yarn"]
 }
