--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "@types/underscore": "^1.11.4",
     "@types/xml2js": "^0.4.9",
     "@types/yargs-parser": "^21.0.0",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
     "dotenv": "~16.0.0",
-    "eslint": "8.13.0",
+    "eslint": "^8.13.0",
     "eslint-config-prettier": "8.5.0",
     "husky": "^7.0.4",
     "import-sort-style-renke": "^6.0.0",
@@ -75,11 +75,11 @@
     "pinst": "^3.0.0",
     "prettier": "2.6.2",
     "prettier-plugin-import-sort": "^0.0.7",
-    "semver": "^7.3.6",
+    "semver": "^7.3.7",
     "ts-jest": "27.1.4",
     "tslib": "^2.3.1",
-    "typescript": "~4.6.3",
-    "verdaccio": "^5.8.0"
+    "typescript": "^4.6.3",
+    "verdaccio": "^5.9.0"
   },
   "importSort": {
     ".js, .jsx, .ts, .tsx, .cjs": {
