chore(repo): nx migrate to 14.0.1

--- a/packages/common/project.json
+++ b/packages/common/project.json
@@ -13,7 +13,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/packages/common"],
       "options": {
-        "jestConfig": "packages/common/jest.config.js",
+        "jestConfig": "packages/common/jest.config.ts",
         "passWithNoTests": true,
         "coverage": true,
         "coverageReporters": ["cobertura"]
