--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "src",
+  "name": "nx-boat-tools",
   "version": "0.1.0-alpha.2",
   "license": "MIT",
   "scripts": {
@@ -33,7 +33,7 @@
   },
   "private": true,
   "dependencies": {
-    "create-nx-workspace": "^14.0.1",
+    "glob": "^8.0.1",
     "guid-typescript": "^1.0.9",
     "minimist": "^1.2.6",
     "tslib": "^2.4.0",
@@ -51,6 +51,7 @@
     "@nrwl/nx-plugin": "14.0.1",
     "@nrwl/workspace": "14.0.1",
     "@types/cross-spawn": "^6.0.2",
+    "@types/glob": "^7.2.0",
     "@types/jest": "27.4.1",
     "@types/minimist": "^1.2.2",
     "@types/mock-fs": "^4.13.1",
